--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+	
 	</head>
 	<body>
 		
@@ -412,7 +412,7 @@
 		</div>
 		<div class="choose animate-box">
 			<h2>Contact</h2>
-			<form action="#">
+			<form action="#" onsubmit="return false">
 				<div class="row form-group">
 					<div class="col-md-6">
 						<input type="text" id="fname" class="form-control" placeholder="Your firstname">
@@ -442,7 +442,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<input type="submit" value="Send Message" class="btn btn-primary">
+					<button class="btn btn-primary" id="send_mail_btn">Send Message</button>
 				</div>
 
 			</form>	
@@ -456,7 +456,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12" style="text-align: center;">
-					<p>&copy; 2022 All Rights Reserved. Designed by @juansesanchezl </p>
+					<p>&copy; <span id="year_html">2022</span> All Rights Reserved. Designed by @juansesanchezl </p>
 				</div>
 			</div>
 		</div>
@@ -479,11 +479,14 @@
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
+	<script src="js/google_map.js"></script> -->
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
+	<!--SMTP LIBRARY-->
+	<script src="js/mail_jssl.js"></script>
+	
 
 	</body>
 </html>
