--- a/index.html
+++ b/index.html
@@ -484,6 +484,8 @@
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
+	<!--Alerts-->
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<!--SMTP LIBRARY-->
 	<script src="js/mail_jssl.js"></script>
 	
