Last updates - Projects

--- a/index.html
+++ b/index.html
@@ -362,11 +362,55 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
+						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-13.jpg);"></a>
+						<div class="blog-text">
+							<span class="posted_on">March. 20th 2022</span>
+							<h3><a href="#">Proyecto EPORRA - StandAlone - Python</a></h3>
+							<p>Este es un proyecto de la MISO, en donde se creo una aplicacion standalone en python de apuestas llamado EPORRA</p>
+							<ul class="stuff">
+								<li><a target="_blank" href="https://www.youtube.com/watch?v=50EaUTj1xhE">Video <i class="icon-graduation-cap"></i></a></li>
+								<li><a target="_blank" href="https://github.com/jsanchezl12/ProyectoApuestas_PracticasAgilismo">Read More<i class="icon-arrow-right22"></i></a></li>
+							</ul>
+						</div> 
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-9.jpg);"></a>
+						<div class="blog-text">
+							<span class="posted_on">May. 29th 2022</span>
+							<h3><a href="#">Estrategia de Pruebas Automatizadas</a></h3>
+							<p>Este es un proyecto de la MISO, en donde se emplearon pruebas automatizadas utilizando varios frameworks utilizados (cypress, kraken, faker, entre otros)</p>
+							
+							<ul class="stuff">
+								<li><a target="_blank" href="https://www.youtube.com/watch?v=HOhs-u9LyqA&t=2s">Video <i class="icon-graduation-cap"></i></a></li>
+								<li><a target="_blank" href="https://github.com/jsanchezl12/2022_MISOPruebasAuto">Read More<i class="icon-arrow-right22"></i></a></li>
+							</ul>
+						</div> 
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-10.jpg);"></a>
+						<div class="blog-text">
+							<span class="posted_on">May. 29th 2022</span>
+							<h3><a href="#">Proyecto Angular JS - Front Museos</a></h3>
+							<p>En este proyecto de la MISO en donde se desarrollo la parte de Front de un sitio web para desplegar informacion asociada a Museos, Artistas, Exhibiciones, Obras de Arte, Movimientos y Patrocinadores.</p>
+							<ul class="stuff">
+								<li><a target="_blank" href="https://www.youtube.com/watch?v=wWeu2jzmA7U">Video <i class="icon-graduation-cap"></i></a></li>
+								<li><a target="_blank" href="https://github.com/jsanchezl12/ProyectoWeb_AngularFrontMuseos">Read More<i class="icon-arrow-right22"></i></a></li>
+							</ul>
+						</div> 
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-11.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">May. 30th 2022</span>
 							<h3><a href="#">Twitter Bot</a></h3>
 							<p>Este es un proyecto basado en tweepy para hacer post de tweets tanto de imagenes como de videos en una cuenta especifica (in process)</p>
+							<br><br>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
@@ -377,7 +421,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
+						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-12.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Jun. 15th 2022</span>
 							<h3><a href="#">Bot Whatsapp Stickers</a></h3>
@@ -390,6 +434,7 @@
 						</div> 
 					</div>
 				</div>
+				
 			</div>
 		</div>
 	</div>
