se agrega twitter repo

--- a/index.html
+++ b/index.html
@@ -408,13 +408,13 @@
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-11.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">May. 30th 2022</span>
-							<h3><a href="#">Twitter Bot</a></h3>
+							<h3><a href="#">Twitter Bot SCH</a></h3>
 							<p>Este es un proyecto basado en tweepy para hacer post de tweets tanto de imagenes como de videos en una cuenta especifica (in process)</p>
 							<br><br>
 							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><i class="icon-heart2"></i>109</li>
+								<li><i class="icon-eye2"></i>508</li>
+								<li><a target="_blank" href="https://github.com/juansesanchezl/SCH">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
