--- a/index.html
+++ b/index.html
@@ -461,7 +461,6 @@
 								<h3><a href="#">Estrategia de Pruebas Automatizadas</a></h3>
 								<p>Este es un proyecto de la MISO, en donde se emplearon pruebas automatizadas
 									utilizando varios frameworks utilizados (cypress, kraken, faker, entre otros)</p>
-
 								<ul class="stuff">
 									<li><a target="_blank" href="https://www.youtube.com/watch?v=HOhs-u9LyqA&t=2s">Video
 											<i class="icon-graduation-cap"></i></a></li>
@@ -493,9 +492,178 @@
 					</div>
 					<div class="col-md-4">
 						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-14.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Sep. 25th 2022</span>
+								<h3><a href="#">Proyecto Eporra - Web</a></h3>
+								<p>En este proyecto se desarrollo un backend y frontend para un sistema de apuestas
+									online en Angular JS, y Flask.</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank" href="https://github.com/jsanchezl12/miso_eporra_2">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-15.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Sep. 30th 2022</span>
+								<h3><a href="#">Proyecto Arquitectura de Software - 2</a></h3>
+								<p>En este proyecto se desarrollaron 2 experimentos en donde se implementaban una api,
+									una cola, un observador, y un componente de salud utilizando flask.</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/miso_arqui_2_project">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-16.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Dec. 4th 2022</span>
+								<h3><a href="#">Proyecto Movil - Android</a></h3>
+								<p>Se desarrollo una aplicacion con arquitectura MVVM en kotlin, con 3
+									componentes enfocados para albumes, bandas, y coleccionistas. Se utilizo
+									expresso para pruebas, y un analisis de accesibilidad.</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/desarrollo_movil_miso">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-17.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Dec. 4th 2022</span>
+								<h3><a href="#">Proyecto Cloud - GCP</a></h3>
+								<p>En este proyecto se desarrollaron unos componentes (api, backend, bucket, converter,
+									worker, mail, redis) que se conectaban entre si por medio de contenedores, y eran
+									desplegados en GCP. Se utilizaron APIs de Google (Mail, Bucket, Credentials).</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/desarrollo_cloud_miso">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-18.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Feb. 13th 2023</span>
+								<h3><a href="#">Proyecto Flask API</a></h3>
+								<p>En este proyecto se desarrollo una API utilizando Flask de los diferentes metodos
+									(GET, POST, PUT, DELETE). Ademas se expone el uso basico de una API rest, y como
+									aplicarlo a tecnologias nuevas, y un ejemplo basico con una api de pedidos de
+									empanadas.</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/flask_rest_api_example">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-19.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Mar. 19th 2023</span>
+								<h3><a href="#">Proyecto UX Alarms - Figma</a></h3>
+								<p>En este proyecto se desarrollo un modelado para un aplicativo de alarmas bajo todos
+									los pasos involucrados para generar una experiencia de usuario utilizando modelado
+									en papel, mockups en PDF y Figma, y un prototipo web y movil en angular y android.
+								</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/202311_UXAlarms_jsanchezl12">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-20.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Mar. 19th 2023</span>
+								<h3><a href="#">Proyecto Native Cloud Apps - GCP</a></h3>
+								<p>En este proyecto se desarrollaron unos componentes (archivar mail, ofertas,
+									publicaciones, rutas, envio mail, api, usuarios, utilidad) que se conectaban entre
+									si por medio de kubernetes y contenedores, y eran desplegados en GCP.</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/miso_nativeapps_cloud_project">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-21.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Mar. 28th 2023</span>
+								<h3><a href="#">Proyecto Containers - K8t - Docker</a></h3>
+								<p>En este proyecto se desarrollaron varios laboratorios explicando el uso de
+									contenedores desde lo mas basico hasta aplicarlo utilizando kubernetes. Se utilizo
+									contenedores por medio de dockerfile, docker-compose, y micro-kube </p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank" href="https://github.com/jsanchezl12/containers_example">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-22.jpg);"></a>
+							<div class="blog-text">
+								<span class="posted_on">May. 1st 2024</span>
+								<h3><a href="#">Proyecto AWS - Devops - CI/CD</a></h3>
+								<p>En este proyecto se desarrollaron unas entregas en donde se utilizaban diferentes
+									servicios de AWS (AWS Beanstalk, AWS CodeCommit, AWS CodeDeploy, ECR, ECS).</p>
+								<ul class="stuff">
+									<li><i class="icon-heart2"></i>249</li>
+									<li><i class="icon-eye2"></i>308</li>
+									<li><a target="_blank"
+											href="https://github.com/jsanchezl12/miso_devops_project">Read
+											More<i class="icon-arrow-right22"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-11.jpg);"></a>
 							<div class="blog-text">
-								<span class="posted_on">May. 30th 2022</span>
+								<span class="posted_on">May. 30th 2024</span>
 								<h3><a href="#">Twitter Bot</a></h3>
 								<p>Este es un proyecto basado en tweepy para hacer post de tweets tanto de imagenes como
 									de videos en una cuenta especifica (in process)</p>
@@ -524,107 +692,107 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
-			<div id="fh5co-started" class="fh5co-bg-dark">
-				<div class="overlay"></div>
-				<div class="container">
-					<div class="row animate-box">
-						<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-							<h2>Contact Me!</h2>
-							<p><a target="_blank"
-									href="https://api.whatsapp.com/send?phone=573057610909&text=Hola%20Juan%20deseo%20asesoría%20sobre:"
-									class="btn btn-default btn-lg">Write a message via Whatsapp</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div id="fh5co-consult">
-				<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
-					<div class="overlay"></div>
-				</div>
-				<div class="choose animate-box">
-					<h2>Contact</h2>
-					<form action="#" onsubmit="return false">
-						<div class="row form-group">
-							<div class="col-md-6">
-								<input type="text" id="fname" class="form-control" placeholder="Your firstname">
-							</div>
-						</div>
-						<div class="row form-group">
-							<div class="col-md-6">
-								<input type="text" id="lname" class="form-control" placeholder="Your lastname">
-							</div>
-						</div>
-
-						<div class="row form-group">
-							<div class="col-md-12">
-								<input type="text" id="email" class="form-control" placeholder="Your email address">
-							</div>
-						</div>
-
-						<div class="row form-group">
-							<div class="col-md-12">
-								<input type="text" id="subject" class="form-control"
-									placeholder="Your subject of this message">
-							</div>
-						</div>
-
-						<div class="row form-group">
-							<div class="col-md-12">
-								<textarea name="message" id="message" cols="30" rows="10" class="form-control"
-									placeholder="Say something about us"></textarea>
-							</div>
-						</div>
-						<div class="form-group">
-							<button class="btn btn-primary" id="send_mail_btn">Send Message</button>
-						</div>
-
-					</form>
-				</div>
-			</div>
-
-
 		</div>
-
-		<div id="fh5co-footer">
+		<div id="fh5co-started" class="fh5co-bg-dark">
+			<div class="overlay"></div>
 			<div class="container">
-				<div class="row">
-					<div class="col-md-12" style="text-align: center;">
-						<p>&copy; <span id="year_html">2024</span> All Rights Reserved. Designed by @juansesanchezl </p>
+				<div class="row animate-box">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+						<h2>Contact Me!</h2>
+						<p><a target="_blank"
+								href="https://api.whatsapp.com/send?phone=573057610909&text=Hola%20Juan%20deseo%20asesoría%20sobre:"
+								class="btn btn-default btn-lg">Write a message via Whatsapp</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="gototop js-top">
-			<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
+		<div id="fh5co-consult">
+			<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
+				<div class="overlay"></div>
+			</div>
+			<div class="choose animate-box">
+				<h2>Contact</h2>
+				<form action="#" onsubmit="return false">
+					<div class="row form-group">
+						<div class="col-md-6">
+							<input type="text" id="fname" class="form-control" placeholder="Your firstname">
+						</div>
+					</div>
+					<div class="row form-group">
+						<div class="col-md-6">
+							<input type="text" id="lname" class="form-control" placeholder="Your lastname">
+						</div>
+					</div>
+
+					<div class="row form-group">
+						<div class="col-md-12">
+							<input type="text" id="email" class="form-control" placeholder="Your email address">
+						</div>
+					</div>
+
+					<div class="row form-group">
+						<div class="col-md-12">
+							<input type="text" id="subject" class="form-control"
+								placeholder="Your subject of this message">
+						</div>
+					</div>
+
+					<div class="row form-group">
+						<div class="col-md-12">
+							<textarea name="message" id="message" cols="30" rows="10" class="form-control"
+								placeholder="Say something about us"></textarea>
+						</div>
+					</div>
+					<div class="form-group">
+						<button class="btn btn-primary" id="send_mail_btn">Send Message</button>
+					</div>
+
+				</form>
+			</div>
 		</div>
 
-		<!-- jQuery -->
-		<script src="js/jquery.min.js"></script>
-		<!-- jQuery Easing -->
-		<script src="js/jquery.easing.1.3.js"></script>
-		<!-- Bootstrap -->
-		<script src="js/bootstrap.min.js"></script>
-		<!-- Waypoints -->
-		<script src="js/jquery.waypoints.min.js"></script>
-		<!-- Stellar Parallax -->
-		<script src="js/jquery.stellar.min.js"></script>
-		<!-- Easy PieChart -->
-		<script src="js/jquery.easypiechart.min.js"></script>
-		<!-- Google Map -->
-		<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
+
+	</div>
+
+	<div id="fh5co-footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12" style="text-align: center;">
+					<p>&copy; <span id="year_html">2024</span> All Rights Reserved. Designed by @juansesanchezl </p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="gototop js-top">
+		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
+	</div>
+
+	<!-- jQuery -->
+	<script src="js/jquery.min.js"></script>
+	<!-- jQuery Easing -->
+	<script src="js/jquery.easing.1.3.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Waypoints -->
+	<script src="js/jquery.waypoints.min.js"></script>
+	<!-- Stellar Parallax -->
+	<script src="js/jquery.stellar.min.js"></script>
+	<!-- Easy PieChart -->
+	<script src="js/jquery.easypiechart.min.js"></script>
+	<!-- Google Map -->
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
 	<script src="js/google_map.js"></script> -->
 
-		<!-- Main -->
-		<script src="js/main.js"></script>
-		<!--Alerts-->
-		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-		<!--SMTP LIBRARY-->
-		<script src="js/mail_jssl.js"></script>
+	<!-- Main -->
+	<script src="js/main.js"></script>
+	<!--Alerts-->
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<!--SMTP LIBRARY-->
+	<script src="js/mail_jssl.js"></script>
 
 
 </body>
