Update cards distribution above 992 px

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/solvo_logo.png);"></a>
 							<div class="blog-text">
@@ -435,7 +435,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-13.jpg);"></a>
 							<div class="blog-text">
@@ -453,7 +453,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-9.jpg);"></a>
 							<div class="blog-text">
@@ -471,7 +471,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-10.jpg);"></a>
 							<div class="blog-text">
@@ -490,7 +490,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-14.jpg);"></a>
 							<div class="blog-text">
@@ -507,7 +507,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-15.jpg);"></a>
 							<div class="blog-text">
@@ -525,7 +525,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-16.jpg);"></a>
 							<div class="blog-text">
@@ -544,7 +544,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-17.jpg);"></a>
 							<div class="blog-text">
@@ -563,7 +563,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-18.jpg);"></a>
 							<div class="blog-text">
@@ -584,7 +584,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-19.jpg);"></a>
 							<div class="blog-text">
@@ -604,7 +604,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-20.jpg);"></a>
 							<div class="blog-text">
@@ -623,7 +623,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-21.jpg);"></a>
 							<div class="blog-text">
@@ -641,7 +641,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-22.jpg);"></a>
 							<div class="blog-text">
@@ -659,7 +659,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-11.jpg);"></a>
 							<div class="blog-text">
@@ -676,7 +676,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 columnW">
 						<div class="fh5co-blog animate-box">
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-12.jpg);"></a>
 							<div class="blog-text">
