Update english copys

--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
 					<div class="col-md-5">
 						<ul class="info">
 							<li><span class="first-block">Full Name:</span><span class="second-block">Juan Sebastian
-									Sanchez Lopez</span></li>
+									Sanchez L.</span></li>
 							<li><span class="first-block">Phone:</span><span class="second-block">+57 302 455
 									6907</span></li>
 							<li><span class="first-block">Email:</span><span
 									class="second-block">juans.sanchezlopez@gmail.com</span></li>
 							<li><span class="first-block">Website:</span><span
 									class="second-block">juansesanchezl.github.io/me/</span></li>
-							<li><span class="first-block">Address:</span><span class="second-block">Calle 83A #118-29
-									Bogota, Colombia</span></li>
 						</ul>
 					</div>
 					<div class="col-md-7">
 						<h2>Just one definition</h2>
-						<p>A committed, proactive, dynamic, creative, honest and responsible person who maintains
-							excellent interpersonal relationships, with the ability to work in a team and individually,
-							with the capacity to perform the functions required by the company, related to my career.
+						<p>As a seasoned Senior Developer, I leverage my creativity and robust technical expertise to
+							innovate and drive successful project outcomes. I am known for my commitment, proactive
+							leadership, and strong interpersonal skills. Working efficiently both individually and
+							within team environments, I consistently exceed industry standards and contribute to future
+							growth with strategic, forward-thinking solutions.
 						</p>
 						<p>
 						<ul class="fh5co-social-icons">
@@ -425,7 +425,7 @@
 							<div class="blog-text">
 								<span class="posted_on">Apr. 4th 2018</span>
 								<h3><a href="#">SOLVO App</a></h3>
-								<p>Sistema de Informacion colaborativo para los conductores de carga terrestre</p>
+								<p>Collaborative Information System for Land Freight Drivers</p>
 								<ul class="stuff">
 									<li><a target="_blank" href="https://www.youtube.com/watch?v=hz5aQJYQqOc">Video <i
 												class="icon-graduation-cap"></i></a></li>
@@ -440,9 +440,9 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-13.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">March. 20th 2022</span>
-								<h3><a href="#">Proyecto EPORRA - StandAlone - Python</a></h3>
-								<p>Este es un proyecto de la MISO, en donde se creo una aplicacion standalone en python
-									de apuestas llamado EPORRA</p>
+								<h3><a href="#">EPORRA Project - StandAlone - Python</a></h3>
+								<p>This is a project from MISO, where we created a standalone betting application in
+									Python called EPORRA.</p>
 								<ul class="stuff">
 									<li><a target="_blank" href="https://www.youtube.com/watch?v=50EaUTj1xhE">Video <i
 												class="icon-graduation-cap"></i></a></li>
@@ -458,9 +458,9 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-9.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">May. 29th 2022</span>
-								<h3><a href="#">Estrategia de Pruebas Automatizadas</a></h3>
-								<p>Este es un proyecto de la MISO, en donde se emplearon pruebas automatizadas
-									utilizando varios frameworks utilizados (cypress, kraken, faker, entre otros)</p>
+								<h3><a href="#">Automated Testing Strategy</a></h3>
+								<p>This is a project from MISO, where we implemented automated testing using various
+									frameworks including Cypress, Kraken, Faker, among others.</p>
 								<ul class="stuff">
 									<li><a target="_blank" href="https://www.youtube.com/watch?v=HOhs-u9LyqA&t=2s">Video
 											<i class="icon-graduation-cap"></i></a></li>
@@ -476,10 +476,10 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-10.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">May. 29th 2022</span>
-								<h3><a href="#">Proyecto Angular JS - Front Museos</a></h3>
-								<p>En este proyecto de la MISO en donde se desarrollo la parte de Front de un sitio web
-									para desplegar informacion asociada a Museos, Artistas, Exhibiciones, Obras de Arte,
-									Movimientos y Patrocinadores.</p>
+								<h3><a href="#">Angular JS Project - Museum Frontend</a></h3>
+								<p>In this project from MISO, we developed the frontend of a website designed to display
+									information related to Museums, Artists, Exhibitions, Works of Art, Movements, and
+									Sponsors.</p>
 								<ul class="stuff">
 									<li><a target="_blank" href="https://www.youtube.com/watch?v=wWeu2jzmA7U">Video <i
 												class="icon-graduation-cap"></i></a></li>
@@ -495,9 +495,9 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-14.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">Sep. 25th 2022</span>
-								<h3><a href="#">Proyecto Eporra - Web</a></h3>
-								<p>En este proyecto se desarrollo un backend y frontend para un sistema de apuestas
-									online en Angular JS, y Flask.</p>
+								<h3><a href="#">EPORRA Project - Web</a></h3>
+								<p>In this project, we developed both a backend and frontend for an online betting
+									system using Angular JS and Flask.</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
 									<li><i class="icon-eye2"></i>308</li>
@@ -512,9 +512,9 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-15.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">Sep. 30th 2022</span>
-								<h3><a href="#">Proyecto Arquitectura de Software - 2</a></h3>
-								<p>En este proyecto se desarrollaron 2 experimentos en donde se implementaban una api,
-									una cola, un observador, y un componente de salud utilizando flask.</p>
+								<h3><a href="#">Software Architecture Project - 2</a></h3>
+								<p>In this project, we conducted two experiments in which we implemented an API, a
+									queue, an observer, and a health component using Flask.</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
 									<li><i class="icon-eye2"></i>308</li>
@@ -530,10 +530,10 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-16.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">Dec. 4th 2022</span>
-								<h3><a href="#">Proyecto Movil - Android</a></h3>
-								<p>Se desarrollo una aplicacion con arquitectura MVVM en kotlin, con 3
-									componentes enfocados para albumes, bandas, y coleccionistas. Se utilizo
-									expresso para pruebas, y un analisis de accesibilidad.</p>
+								<h3><a href="#">Mobile Project - Android</a></h3>
+								<p>I developed an application using the MVVM architecture in Kotlin, with three
+									components focused on albums, bands, and collectors. Espresso was used for testing,
+									along with an accessibility analysis.</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
 									<li><i class="icon-eye2"></i>308</li>
@@ -549,10 +549,10 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-17.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">Dec. 4th 2022</span>
-								<h3><a href="#">Proyecto Cloud - GCP</a></h3>
-								<p>En este proyecto se desarrollaron unos componentes (api, backend, bucket, converter,
-									worker, mail, redis) que se conectaban entre si por medio de contenedores, y eran
-									desplegados en GCP. Se utilizaron APIs de Google (Mail, Bucket, Credentials).</p>
+								<h3><a href="#">Cloud Project - GCP</a></h3>
+								<p>In this project, I developed several components (API, backend, bucket, converter,
+									worker, mail, redis) that interconnected via containers and were deployed on GCP.
+									Google APIs such as Mail, Bucket, and Credentials were utilized.</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
 									<li><i class="icon-eye2"></i>308</li>
@@ -568,11 +568,11 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-18.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">Feb. 13th 2023</span>
-								<h3><a href="#">Proyecto Flask API</a></h3>
-								<p>En este proyecto se desarrollo una API utilizando Flask de los diferentes metodos
-									(GET, POST, PUT, DELETE). Ademas se expone el uso basico de una API rest, y como
-									aplicarlo a tecnologias nuevas, y un ejemplo basico con una api de pedidos de
-									empanadas.</p>
+								<h3><a href="#">Flask API Project</a></h3>
+								<p>In this project, I developed an API using Flask, encompassing different methods
+									(GET, POST, PUT, DELETE). In addition, we demonstrated the basic usage of a REST API
+									and how to apply it to emerging technologies, illustrated with a basic example of an
+									empanada order API.</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
 									<li><i class="icon-eye2"></i>308</li>
@@ -590,9 +590,9 @@
 							<div class="blog-text">
 								<span class="posted_on">Mar. 19th 2023</span>
 								<h3><a href="#">Proyecto UX Alarms - Figma</a></h3>
-								<p>En este proyecto se desarrollo un modelado para un aplicativo de alarmas bajo todos
-									los pasos involucrados para generar una experiencia de usuario utilizando modelado
-									en papel, mockups en PDF y Figma, y un prototipo web y movil en angular y android.
+								<p>In this project, I developed a model for an alarm application, covering all the
+									steps involved in creating a user experience. This included paper modeling, mockups
+									in PDF and Figma, and a web and mobile prototype developed in Angular and Android.
 								</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
@@ -609,10 +609,10 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-20.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">Mar. 19th 2023</span>
-								<h3><a href="#">Proyecto Native Cloud Apps - GCP</a></h3>
-								<p>En este proyecto se desarrollaron unos componentes (archivar mail, ofertas,
-									publicaciones, rutas, envio mail, api, usuarios, utilidad) que se conectaban entre
-									si por medio de kubernetes y contenedores, y eran desplegados en GCP.</p>
+								<h3><a href="#">Native Cloud Apps Project - GCP</a></h3>
+								<p>In this project, we developed several components (archive mail, offers, publications,
+									routes, mail delivery, API, users, utility) that interconnected via Kubernetes and
+									containers, and were deployed on GCP.</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
 									<li><i class="icon-eye2"></i>308</li>
@@ -628,10 +628,10 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-21.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">Mar. 28th 2023</span>
-								<h3><a href="#">Proyecto Containers - K8t - Docker</a></h3>
-								<p>En este proyecto se desarrollaron varios laboratorios explicando el uso de
-									contenedores desde lo mas basico hasta aplicarlo utilizando kubernetes. Se utilizo
-									contenedores por medio de dockerfile, docker-compose, y micro-kube </p>
+								<h3><a href="#">Containers Project - K8s - Docker</a></h3>
+								<p>In this project, I developed various labs explaining the use of containers from the
+									basics to application using Kubernetes. Containers were utilized via Dockerfile,
+									Docker Compose, and MicroK8s.</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
 									<li><i class="icon-eye2"></i>308</li>
@@ -646,9 +646,9 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-22.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">May. 1st 2023</span>
-								<h3><a href="#">Proyecto AWS - Devops - CI/CD</a></h3>
-								<p>En este proyecto se desarrollaron unas entregas en donde se utilizaban diferentes
-									servicios de AWS (AWS Beanstalk, AWS CodeCommit, AWS CodeDeploy, ECR, ECS).</p>
+								<h3><a href="#">AWS Project - DevOps - CI/CD</a></h3>
+								<p>In this project, we developed deliveries where we utilized various AWS services,
+									including AWS Beanstalk, AWS CodeCommit, AWS CodeDeploy, ECR, and ECS.</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
 									<li><i class="icon-eye2"></i>308</li>
@@ -665,8 +665,8 @@
 							<div class="blog-text">
 								<span class="posted_on">May. 30th 2024</span>
 								<h3><a href="#">Twitter Bot</a></h3>
-								<p>Este es un proyecto basado en tweepy para hacer post de tweets tanto de imagenes como
-									de videos en una cuenta especifica (in process)</p>
+								<p>This is a project based on Tweepy to post tweets, including both images and videos,
+									to a specific account (in process).</p>
 								<br><br>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
@@ -681,9 +681,9 @@
 							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-12.jpg);"></a>
 							<div class="blog-text">
 								<span class="posted_on">Jun. 15th 2022</span>
-								<h3><a href="#">Bot Whatsapp Stickers</a></h3>
-								<p>Este es un bot de whatsapp el cual permite convertir imagenes o videos a pequeños
-									stickers (in process)</p>
+								<h3><a href="#">WhatsApp Stickers Bot</a></h3>
+								<p>This is a WhatsApp bot that enables the conversion of images or videos into small
+									stickers (in process).</p>
 								<ul class="stuff">
 									<li><i class="icon-heart2"></i>249</li>
 									<li><i class="icon-eye2"></i>308</li>
